# HTML-Visualizer-rs

./: Cargo.toml  README.md
examples/: grid.rs
src/: color.rs  html.rs  lib.rs  visualizer.rs
